# first_rust_project

./: Cargo.toml  README.md
src/: main.rs
