[package]
name = "first_rust_project"
version = "0.1.0"
edition = "2021"
authors = ["Johnson Jan Su <su1221jan@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
env_logger = "0.10"
futures = "0.3"
juniper = "0.15.11"
juniper_graphql_ws = "0.3.0"
juniper_warp = { version = "0.7.0", features = ["subscriptions"] }
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.7", features = ["with-uuid-0_8"] }
uuid = { version = "0.8", features = ["v4"] }
warp = "0.3"
